--- a/arcitech-test/src/App.css
+++ b/arcitech-test/src/App.css
@@ -1,6 +1,12 @@
 .App {
   text-align: center;
 }
+.container{
+  display: flex;
+  flex-direction: column;
+  gap:3rem;
+  align-items: center;
+}
 
 .App-logo {
   height: 40vmin;
